svx/inc/sdr/contact/objectcontactofobjlistpainter.hxx
@@ -77,6 +77,7 @@ public:
 
     // pdf export? Default is false
     virtual bool isOutputToPDFFile() const override;
+    virtual bool isExportTaggedPDF() const override;
 
     virtual OutputDevice* TryToGetOutputDevice() const override;
 };
